# flann

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.d_rebuild  Makefile.dist  Makefile.dmd  Makefile.gdc  Makefile.platform.example  Makefile.rebuild  README  README.md  TODO  aggnn  aggnn.kdevelop  aggnn.kdevelop.filelist  aggnn.kdevses  aggtest  build_matlab_linux.sh  convert  nn.kdevelop  requirements.txt  run_developer_setup.py  run_test.sh  setup.py  skbuild_template.py  tango.patch  test.err  vector
cmake/: CMakeLists.txt  Config.cmake.in  FindLZ4.cmake  FindTBB.cmake  UseLATEX.cmake  flann.pc.in  flann_utils.cmake
data/: clusterData.nn  results.txt  sift10K.data  sift10K.nn  sift1K.data  sift1K.nn  sift20.data  sift20.nn  sift2K.data  sift2K.nn  sift3K.data  sift3K.nn  sift4K.data  sift5K.data  sift6K.data  sift7K.data  sift8K.data  (+3 more)
doc/: CMakeLists.txt  Makefile  README  manual.tex  references.bib  user_doc.tex
examples/: CMakeLists.txt  README  example.py  flann_example.c  flann_example.cpp  flann_example_mpi.cpp  flann_mpi_client.cpp  flann_mpi_server.cpp  queries.h
src/cpp/: CMakeLists.txt  constants.h  flann.cpp  flann.h  flann.hpp  python_functions.cpp
src/cpp/algo/: Allocator.h  Dataset.h  Heap.h  KDTree.h  KMeansTree.h  Random.h  ResultSet.h  Variant.h  defines.h  dist.h  test.cc  test_dataset  test_random  test_random.cc  test_static  test_static.cc
src/cpp/algorithms/: BFSearch.h  CompositeTree.h  KDTree.h  KMeansTree.h  LinearSearch.h  NNIndex.cpp  NNIndex.h  VPTree.h  autotuned_index.h  composite_index.h  dist.cpp  dist.h  kdtree_index.h  kdtree_mt_index.h  kmeans_index.h  linear_index.h  nn_index.h
src/cpp/flann/: config.h  config.h.in  defines.h  flann.cpp  flann.h  flann.hpp  flann_cpp.cpp  flann_mpi.hpp  general.h
src/cpp/flann/algorithms/: all_indices.h  autotuned_index.h  center_chooser.h  composite_index.h  dist.cpp  dist.h  dist_mkl.h  hierarchical_clustering_index.h  hierarchical_opencl_index.h  index_abstractions.h  kdtree_cuda_3d_index.cu  kdtree_cuda_3d_index.h  kdtree_cuda_builder.h  kdtree_index.h  kdtree_index2.h  kdtree_mt_index.h  kdtree_old_index.h  kdtree_simple_index.h  kdtree_single_index.h  kmeans_index.h  kmeans_opencl_index.h  linear_index.h  lsh_index.h  nn_index.h  nn_opencl_index.h
src/cpp/flann/ext/: lz4.c  lz4.h  lz4hc.c  lz4hc.h
src/cpp/flann/io/: hdf5.h  io.h
src/cpp/flann/mpi/: client.h  flann_mpi_client.cpp  index.h  queries.h  server.h
src/cpp/flann/nn/: ground_truth.h  index_testing.cpp  index_testing.h  simplex_downhill.h
src/cpp/flann/tbb/: bodies.hpp
src/cpp/flann/util/: allocator.h  any.h  common.h  dynamic_bitset.h  free_size_heap.h  heap.h  logger.cpp  logger.h  lsh_table.cpp  lsh_table.h  matrix.h  object_factory.h  pair_iterator.hpp  params.h  random.cpp  random.h  result_set.h  sampling.h  saving.cpp  saving.h  serialization.h  timer.h  version.cpp
src/cpp/flann/util/cuda/: result_set.h
src/cpp/nn/: Autotune.h  Testing.cpp  Testing.h  autotune.h  ground_truth.h  index_testing.cpp  index_testing.h  simplex_downhill.h
src/cpp/tests/: CMakeLists.txt  flann_test.cc  test.cc  test_allocator.cc  test_autotune.cc  test_dataset.cc  test_dist.cc  test_kdtree.cc  test_kmeans.cc  test_logger.cc  test_testing.cc  test_variant.cc
src/cpp/util/: Allocator.h  Dataset.h  Heap.h  Logger.cpp  Logger.h  Random.cpp  Random.h  ResultSet.h  Saving.cpp  Saving.h  Timer.h  Variant.h  allocator.h  common.h  heap.h  logger.cpp  logger.h  matrix.h  random.cpp  random.h  result_set.h  sampling.h  saving.cpp  saving.h  test.cc  test_allocator  test_heap  test_heap.cc  timer.h
src/matlab/: CMakeLists.txt  Makefile  flann_build_index.m  flann_free_index.m  flann_load_index.m  flann_radius_search.m  flann_save_index.m  flann_search.m  flann_set_distance_type.m  nearest_neighbors.cc  nearest_neighbors.cpp  test_flann.m
src/python/: CMakeLists.txt  Makefile  flann  flann.py  setup.py  setup.py.tpl  test_c.cpp  test_flann.py
src/python/command/: __init__.py  autotune.py  cluster.py  compute_gt.py  compute_index.py  compute_nn.py  generate_random.py  run_test.py  sample_dataset.py
src/python/displays/: flann_base.pyx  flann_interface.pxd  make_display.py  test.pyx
src/python/io/: binary_dataset.py  dat_dataset.py  dataset.py
src/python/nn/: misc.py
src/python/pyflann/: __init__.py  create_python_base.py  exceptions.py  flann_ctypes.py  flann_python_base.cpp  index.py  pyflann.py  pyflann_base.py  pyflann_base_c.cpp  pyflann_parameters.py  remote_index.py  server.py
src/python/pyflann/bindings/: flann_ctypes.py
src/python/pyflann/bindings/tests/: test_nn_autotune.py  test_nn_index.py  test_utils.py
src/python/pyflann/command/: __init__.py  autotune.py  cluster.py  compute_gt.py  compute_nn.py  convert.py  generate_random.py  run_test.py  sample_dataset.py
src/python/pyflann/io/: __init__.py  binary_dataset.py  dat_dataset.py  dataset.py  hdf5_dataset.py  npy_dataset.py
src/python/pyflann/tests/: test_clustering.py  test_nn.py  test_nn_autotune.py  test_nn_index.py
src/python/pyflann_dist/: create_python_base.py  pyflann.py
src/python/tests/: test.py  test_autotune.py  test_c.py  test_flann.py  test_flann2.py
src/python/util/: exceptions.py  util.h  util_c.py  util_c_c.cpp  weave_tools.py
test/: CMakeLists.txt  datasets  flann_autotuned_test.cpp  flann_cuda_test.cu  flann_example.c  flann_example.cpp  flann_hierarchical_opencl_test.cpp  flann_hierarchical_test.cpp  flann_kdtree_single_test.cpp  flann_kdtree_test.cpp  flann_kmeans_opencl_test.cpp  flann_kmeans_test.cpp  flann_linear_test.cpp  flann_lsh_test.cpp  flann_multithreaded_test.cpp  flann_simple_test.cpp  flann_tests.h  memusage_clustering.py  memusage_nn.py  run_test.sh  simple_benchmark.py  test_add_remove.py  test_add_remove_save.py  test_clustering.py  test_index_save.py  test_nn.py  test_nn_autotune.py  test_nn_index.py  test_saved.cpp
test/data/: match100K.data
test/size_tests/: results.db
tests/: CMakeLists.txt  flann_mt_test.cpp  memusage_clustering.py  test_nn_autotune.py
(+391 files in other folders)
